LPS-137404 Fix loader component height to prevent content jumping

--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/META-INF/resources/css/main.scss
@@ -3,6 +3,9 @@
 
 .audit-graph {
 	position: relative;
+	&-loading {
+		min-height: 304px;
+	}
 }
 
 .content-dashboard-management-toolbar {
